@@ -1,0 +1,8 @@
+<?php
+
+$firephp = FirePHP::getInstance(true);
+
+$firephp->fb("Отладочный");
+
+
+$firephp->fb(array('characters'=>"Отладочный"));
