@@ -27,6 +27,8 @@ $tests['AllVariableTypes'] = 'All Variable Types';
 $tests['ComplexVariableValues'] = 'Complex Variable Types';
 $tests['ComplexTable'] = 'Complex Table';
 $tests['CheckStrictPHP'] = 'Check Strict PHP';
+$tests['UTF8'] = 'UTF-8';
+$tests['DivisionByZeroTrace'] = 'Division by zero trace';
 
 $branches = array();
 $branches[] = '0.1';
